--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-confirm-alert": "^2.8.0",
+    "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.2",
     "react-router": "^6.2.2",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
